[package]
name = "todomvc_dominator"
version = "0.1.0"
description = "TodoMVC using dominator"
authors = ["Pauan <pauanyu+github@pm.me>"]
categories = ["wasm"]
readme = "README.md"
license = "MIT"
edition = "2021"

[dependencies]
dominator = "0.5"
#wasm-bindgen = "0.2.74"
futures-signals = "0.3"
serde_json = "1"
serde_derive = "1"
uuid = { version = "1", features = ["v4", "js", "serde"] }

[dependencies.serde]
version = "1"
features = ["rc"]

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlInputElement",
    "Storage",
    "Url",
]
