[package]
name = "todomvc_spair_keyed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spair = { git = "https://github.com/aclueless/spair.git" }
spair_shared = { path = "../spair_shared", features = ["keyed-app"] }
