[package]
name = "spair_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spair = { git = "https://github.com/aclueless/spair.git" }
todomvc_shared = { path = "../todomvc_shared" }

[features]
keyed-app = ["spair/keyed-list"]
non-keyed-app = []