[package]
name = "spair_shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spair = "0.0.9"
todomvc_shared = { path = "../todomvc_shared" }
uuid = { version = "1", features = ["v4", "js", "serde"] }

[features]
keyed-app = ["spair/keyed-list"]
non-keyed-app = []